--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#667eea" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Flutter AI Chatbot - Flutter 개발을 위한 AI 학습 도우미. 138개의 질문으로 체계적으로 Flutter를 배워보세요."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="keywords" content="Flutter, AI, Chatbot, 학습, 개발, Dart, 모바일 앱" />
+    <meta name="author" content="Flutter AI Chatbot" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Flutter AI Chatbot" />
+    <meta property="og:description" content="Flutter 개발을 위한 AI 학습 도우미. 138개의 질문으로 체계적으로 Flutter를 배워보세요." />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Flutter AI Chatbot" />
+    <meta name="twitter:description" content="Flutter 개발을 위한 AI 학습 도우미. 138개의 질문으로 체계적으로 Flutter를 배워보세요." />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Flutter AI Chatbot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
